--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
   padding: 3rem;
   padding-left: 9rem;
   font-size: 0.2rem;
-  transform: skew(-12deg); }
+  transform: skew(0deg); }
   @media (max-width: 56.25em) {
     .testimonial {
       margin-top: 2rem;
@@ -25,7 +25,7 @@
     float: left;
     overflow: hidden;
     position: relative;
-    transform: translateX(-3rem) skewX(12deg); }
+    transform: translateX(-3rem) skewX(0deg); }
     @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
       .testimonial-shape {
       } }
@@ -42,7 +42,7 @@
   
 
   .testimonial-text {
-    transform: skew(12deg); }
+    transform: skew(0deg); }
     @media (max-width: 37.5em) {
       .testimonial-text {
         padding-left: 0;
@@ -78,7 +78,7 @@
   padding: 3rem;
   padding-left: 9rem;
   font-size: 0.2rem;
-  transform: skew(-12deg); }
+  transform: skew(-0deg); }
   @media (max-width: 56.25em) {
     .testimonial1 {
       width: 100%;
@@ -95,7 +95,13 @@
     float: left;
     overflow: hidden;
     position: relative;
-    transform: translateX(-3rem) skewX(12deg); }
+    transform: translateX(-3rem) skewX(0deg); }
+    .testimonial1:hover .testimonial-caption {
+      opacity: 1;
+      transform: translate(-50%, -50%); }
+    .testimonial1:hover .testimonial-img {
+      transform: translateX(-4rem) scale(1);
+      filter: blur(3px) brightness(70%); }
     @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
       .testimonial-shape {
         -webkit-clip-path: circle(50% at 50% 50%);
@@ -111,7 +117,7 @@
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden; }
   .testimonial-text {
-    transform: skew(12deg); }
+    transform: skew(0deg); }
     @media (max-width: 37.5em) {
       .testimonial-text {
         transform: skewX(0); } }
@@ -588,28 +594,25 @@ body {
   text-decoration: none;
   padding: 1.5rem 4rem;
   display: inline-block;
-  border-radius: 5rem;
+  border-radius: 10rem;
   transition: all .2s;
   position: relative;
   font-size: 1.6rem;
   border: none;
   cursor: pointer; }
-  @media (max-width: 56.25em) {
-    .btn, .btn:link, .btn:visited {
-      font-size: 2.5rem; } }
+
 
 .btn:hover {
   transform: translateY(-3px);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
   .btn:hover::after {
-    transform: scale(1.5);
+    transform: scaleX(1.4) scaleY(1.6);
     opacity: 0; }
 
 .btn:active, .btnfocus {
   outline: none;
   transform: translateY(-1px);
   color: #d896ff;
-  font-weight: bolder;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
 .btn-white {
@@ -666,7 +669,7 @@ body {
   font-weight: 700;
   display: inline-block;
   background-image: linear-gradient(to right, #efbbff, #be29ec);
-  /*-webkit-background-clip: text;*/
+  -webkit-background-clip: text;
   color: transparent; }
   @media (max-width: 56.25em) {
     .heading-sec {
@@ -674,6 +677,9 @@ body {
   @media (max-width: 37.5em) {
     .heading-sec {
       font-size: 2.5rem; } }
+  .heading-sec:hover {
+    font-size: 4rem;
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
 
 .row {
   max-width: 114rem;
@@ -766,53 +772,52 @@ body {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   transform: translateY(0px); }
 
-.composistion {
-  position: relative; }
-  .composistion_photo {
-    margin-top: 15rem;
-    width: 55%;
-    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
-    border-radius: 2px;
-    position: absolute;
-    z-index: 10;
-    transition: all .2s;
-    outline-offset: 2rem; }
-    @media (max-width: 56.25em) {
-      .composistion_photo {
-        float: left;
-        position: relative;
-        width: 33.333333%;
-        box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
-    .composistion_photo-p1 {
-      left: 0;
-      top: -2rem; }
-      @media (max-width: 56.25em) {
-        .composistion_photo-p1 {
-          top: 0;
-          transform: scale(1.2); } }
-    .composistion_photo-p2 {
-      right: 0;
-      top: 2rem; }
-      @media (max-width: 56.25em) {
-        .composistion_photo-p2 {
-          top: 0;
-          transform: scale(1.3);
-          z-index: 100; } }
-    .composistion_photo-p3 {
-      left: 20%;
-      top: 10rem; }
-      @media (max-width: 56.25em) {
-        .composistion_photo-p3 {
-          top: 0rem;
-          left: 0;
-          transform: scale(1.3); } }
-    .composistion_photo:hover {
-      outline: 1rem solid rgb(245,128,38);
-      transform: scale(1.05) translateY(-0.5rem);
-      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
-      z-index: 20; }
-  .composistion:hover .composistion_photo:not(:hover) {
-    transform: scale(0.95); }
+  .composition {
+    position: relative; }
+    .composition__photo {
+      width: 55%;
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+      border-radius: 2px;
+      position: absolute;
+      z-index: 10;
+      transition: all .2s;
+      outline-offset: 2rem; }
+      @media only screen and (max-width: 56.25em) {
+        .composition__photo {
+          float: left;
+          position: relative;
+          width: 33.33333333%;
+          box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2); } }
+      .composition__photo--p1 {
+        left: 0;
+        top: -2rem; }
+        @media only screen and (max-width: 56.25em) {
+          .composition__photo--p1 {
+            top: 0;
+            transform: scale(1.2); } }
+      .composition__photo--p2 {
+        right: 0;
+        top: 2rem; }
+        @media only screen and (max-width: 56.25em) {
+          .composition__photo--p2 {
+            top: -1rem;
+            transform: scale(1.3);
+            z-index: 100; } }
+      .composition__photo--p3 {
+        left: 20%;
+        top: 10rem; }
+        @media only screen and (max-width: 56.25em) {
+          .composition__photo--p3 {
+            top: 1rem;
+            left: 0;
+            transform: scale(1.1); } }
+      .composition__photo:hover {
+        outline: 1.5rem solid #55c57a;
+        transform: scale(1.05) translateY(-0.5rem);
+        box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+        z-index: 20; }
+    .composition:hover .composition__photo:not(:hover) {
+      transform: scale(0.95); }
 
 .section-features {
   padding: 20rem 0;
@@ -863,7 +868,7 @@ body {
   height: 50rem; }
   .card-side {
     height: 50rem;
-    transition: all 5s ease;
+    transition: all 2s ease;
     position: absolute;
     top: 0;
     left: 0;
