--- a/css/style.css
+++ b/css/style.css
@@ -616,15 +616,15 @@ body {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
 .btn-white {
-  background-color: white; }
+  background-color: rgba(255, 255, 255, 0.61); }
   .btn-white:after {
     background-color: white; }
 
 .btn-purple {
-  background-color: #be29ec;
+  background-color:#DD0D62;
   color: white; }
   .btn-purple::after {
-    background-color: #be29ec; }
+    background-color: #F57E27; }
 
 .btn::after {
   content: "";
@@ -668,7 +668,7 @@ body {
   text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
-  background-image: linear-gradient(to right, #efbbff, #be29ec);
+  background-image: linear-gradient(to right, #F57E27, #DD0D62);
   -webkit-background-clip: text;
   color: transparent; }
   @media (max-width: 56.25em) {
@@ -812,7 +812,7 @@ body {
             left: 0;
             transform: scale(1.1); } }
       .composition__photo:hover {
-        outline: 1.5rem solid #55c57a;
+        outline: .5rem solid #F57E27;
         transform: scale(1.05) translateY(-0.5rem);
         box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
         z-index: 20; }
@@ -821,7 +821,7 @@ body {
 
 .section-features {
   padding: 20rem 0;
-  background-image: linear-gradient(to right bottom, rgba(216, 150, 255, 0.8), rgba(190, 41, 236, 0.8)), url(../img/nat-4.jpg);
+  background-image: linear-gradient(to right bottom, #000000a6, #000000b6), url(../img/nat-4.jpg);
   background-size: cover;
   margin-top: -10rem; }
   @media (max-width: 56.25em) {
@@ -843,7 +843,7 @@ body {
     font-size: 6rem;
     margin-bottom: .5rem;
     display: inline-block;
-    background-image: linear-gradient(to right, #efbbff, #be29ec);
+    background-image: linear-gradient(to right, #F57E27, #DD0D62);
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent; }
@@ -854,7 +854,7 @@ body {
     transform: translateY(-1.5rem) scale(1.03); }
 
 .section-tour {
-  background-color: #f7f7f7;
+  background-color: white;
   padding: 25rem 0 15rem 0;
   margin-top: -10rem; }
   @media (max-width: 56.25em) {
