--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,12 @@
 }
 
 .bak {
-    background: url("/img/nat-6.jpg") no-repeat center;
+    background-color: lightpink;
+}
+
+.paragraph1{
+    color: black;
+    font-size: 1.15rem;
 }
 
 .pho {
@@ -338,60 +343,65 @@ input[type='radio']:checked:before {
 
 .footer {
     background-color: #333333;
-    padding: 2rem 0;
-    font-size: 1.4rem;
-}
+    padding: 1rem;
+    font-size: 0.8rem; }
+    .footer-logo-box {
+      text-align: center; }
+    .footer-logo {
+      width: 10rem;
+      height: auto; }
+    .footer-navigation {
+      border-top: 1px solid #eee;
+      padding: 1rem;
+      display: inline-block; }
+    .footer-list {
+      list-style: none; }
+    .footer-item {
+      display: inline-block; }
+      .footer-item:not(:last-child) {
+        margin-right: 1.5rem; }
+    .footer-link:link, .footer-link:visited {
+      color: #f7f7f7;
+      background-color: #333333;
+      text-decoration: none;
+      text-transform: uppercase;
+      display: inline-block;
+      transition: all .2s; }
+    .footer-link:hover, .footer-link:active {
+      color: #be29ec;
+      box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+      transform: rotate(5deg) scale(1.3); }
+    .footer-copyright {
+      border-top: 1px solid #eee;
+      padding: 1rem;
+      display: inline-block; }
+    .footer-line{
+      color: white;
+      font-size: 1rem;
+    }
+    .footer-liine{
+      margin-left: 48rem;
+      width: 23rem;
+      border: 0 0 0 1px;
+      margin-bottom: 1rem;
+    }
 
-.footer-logo-box {
-    text-align: center;
-}
 
-.footer-logo {
-    width: 20rem;
-    height: auto;
-}
+      
 
-.footer-navigation {
-    border-top: 1px solid #eee;
-    padding: 2rem;
-    display: inline-block;
-}
-
-.footer-list {
-    list-style: none;
-}
-
-.footer-item {
-    display: inline-block;
-}
-
-.footer-item:not(:last-child) {
-    margin-right: 1.5rem;
-}
-
-.footer-link:link,
-.footer-link:visited {
-    color: #f7f7f7;
-    background-color: #333333;
-    text-decoration: none;
-    text-transform: uppercase;
-    display: inline-block;
-    transition: all .2s;
-}
-
-.footer-link:hover,
-.footer-link:active {
-    color: #be29ec;
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
-    transform: rotate(5deg) scale(1.3);
-}
-
-.footer-copyright {
-    border-top: 1px solid #eee;
-    padding: 2rem;
-    display: inline-block;
-}
-
+  @media (max-width: 37.5em){
+    .photos {
+      width: 17rem;
+    }
+    .footer-item{
+      padding: 0;
+      font-size: 0.7rem;
+    }
+    .footer-liine{
+        margin-left: 9.8rem;
+        font-size: 0.7rem;
+    }
+  }
 .navigation-checkbox {
     display: none;
 }
@@ -609,11 +619,12 @@ input[type='radio']:checked:before {
 }
 
 .popup-text {
+    margin-left: -1rem;
     font-size: 1.4rem;
     margin-bottom: 4rem;
-    -moz-column-count: 2;
+    -moz-column-count: 4;
     -moz-column-gap: 4rem;
-    -moz-column-rule: 1px solid #eeeeee;
+    -moz-column-rule: 4px solid #eeeeee;
     column-count: 2;
     column-gap: 4rem;
     column-rule: 1px solid #eeeeee;
@@ -647,6 +658,182 @@ input[type='radio']:checked:before {
 }
 
 .popup-close:hover {
+    color: #be29ec;
+}
+.popup2 {
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 9999;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
+}
+
+.popup2-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 75%;
+    background-color: #ffffff;
+    box-shadow: 2rem 4rem rgba(0, 0, 0, 0.2);
+    border-radius: 3px;
+    display: table;
+    overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0);
+    transition: all 0.5s 0.2s;
+}
+
+.popup2-left {
+    width: 33.333333%;
+    display: table-cell;
+}
+
+.popup2-right {
+    width: 66.6666667%;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 3rem 5rem;
+}
+
+.popup2-img {
+    display: block;
+    width: 100%;
+}
+
+.popup2-text {
+    margin-left: -1rem;
+    font-size: 1.4rem;
+    margin-bottom: 4rem;
+    -moz-column-count: 4;
+    -moz-column-gap: 4rem;
+    -moz-column-rule: 4px solid #eeeeee;
+    column-count: 2;
+    column-gap: 4rem;
+    column-rule: 1px solid #eeeeee;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+}
+
+.popup2:target {
+    opacity: 1;
+    visibility: visible;
+}
+
+.popup2:target .popup2-content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.popup2-close:link,
+.popup2-close:visited {
+    color: #777777;
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    font-size: 3rem;
+    text-decoration: none;
+    display: inline-block;
+    transition: all .2s;
+    line-height: 1;
+}
+
+.popup2-close:hover {
+    color: #be29ec;
+}
+.popup3 {
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 9999;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
+}
+
+.popup3-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 75%;
+    background-color: #ffffff;
+    box-shadow: 2rem 4rem rgba(0, 0, 0, 0.2);
+    border-radius: 3px;
+    display: table;
+    overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0);
+    transition: all 0.5s 0.2s;
+}
+
+.popup3-left {
+    width: 33.333333%;
+    display: table-cell;
+}
+
+.popup3-right {
+    width: 66.6666667%;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 3rem 5rem;
+}
+
+.popup3-img {
+    display: block;
+    width: 100%;
+}
+
+.popup3-text {
+    margin-left: -1rem;
+    font-size: 1.4rem;
+    margin-bottom: 4rem;
+    -moz-column-count: 4;
+    -moz-column-gap: 4rem;
+    -moz-column-rule: 4px solid #eeeeee;
+    column-count: 2;
+    column-gap: 4rem;
+    column-rule: 1px solid #eeeeee;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+}
+
+.popup3:target {
+    opacity: 1;
+    visibility: visible;
+}
+
+.popup3:target .popup3-content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+.popup3-close:link,
+.popup3-close:visited {
+    color: #777777;
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    font-size: 3rem;
+    text-decoration: none;
+    display: inline-block;
+    transition: all .2s;
+    line-height: 1;
+}
+
+.popup3-close:hover {
     color: #be29ec;
 }
 
@@ -732,7 +919,7 @@ body {
 
 .header-text-box {
     position: absolute;
-    top: 40%;
+    top: 45%;
     left: 50%;
     width: 80%;
     transform: translate(-50%, -50%);
@@ -759,6 +946,7 @@ body {
 
 @media (max-width: 37.5em) {
     .heading-primary-main {
+        margin-left: -3rem;
         letter-spacing: .2rem;
         font-size: 6rem;
     }
@@ -908,7 +1096,7 @@ body {
 }
 
 .section-about {
-    background-color: black;
+    background-image: linear-gradient(to right bottom, #000000a6, #000000b6);
     padding: 25rem 0;
     margin-top: -10vh;
 }
@@ -920,6 +1108,26 @@ body {
 }
 
 .heading-sec {
+    margin-top: -10rem;
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    background-image: linear-gradient(to right, #F57E27, #DD0D62);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+.heading-sec1 {
+    margin-top: 10rem;
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    background-image: linear-gradient(to right, #F57E27, #DD0D62);
+    -webkit-background-clip: text;
+    color: transparent;
+}
+.heading-sec2 {
     font-size: 3.5rem;
     text-transform: uppercase;
     font-weight: 700;
@@ -1018,7 +1226,7 @@ body {
 }
 
 .margin-bottom-big {
-    margin-bottom: 8rem;
+    margin-bottom: 6rem;
 }
 
 @media (max-width: 56.25em) {
@@ -1028,11 +1236,11 @@ body {
 }
 
 .margin-top-big {
-    margin-top: 8rem;
+    margin-top: 2rem;
 }
 
 .margin-bottom-small {
-    margin-bottom: 1.5rem;
+    margin-bottom: 2rem;
 }
 
 @media (max-width: 56.25) {
@@ -1042,6 +1250,7 @@ body {
 }
 
 .heading-text1 {
+    color: orange;
     padding-top: 2rem;
     font-size: 1.6rem;
     font-weight: 700;
@@ -1055,6 +1264,7 @@ body {
 }
 
 .paragraph {
+    color: white;
     font-size: 1.15rem;
 }
 
@@ -1158,8 +1368,8 @@ body {
 }
 
 .section-features {
-    padding: 20rem 0;
-    background-image: linear-gradient(to right bottom, #000000a6, #000000b6), url(../img/nat-4.jpg);
+    padding: 10rem 0;
+    background-color: lightpink;
     background-size: cover;
     margin-top: -10rem;
 }
@@ -1207,9 +1417,8 @@ body {
 }
 
 .section-tour {
-    background-image: linear-gradient(to right bottom, #000000a6, #000000b6), url(../img/nat-4.jpg);
-    padding: 25rem 0 15rem 0;
-    margin-top: -10rem;
+    background-image: linear-gradient(to right bottom, #000000a6, #000000b6);
+    padding: 15rem 0 15rem 0;
 }
 
 @media (max-width: 56.25em) {
@@ -1222,7 +1431,7 @@ body {
     perspective: 150rem;
     -moz-perspective: 150rem;
     position: relative;
-    height: 50rem;
+    height: 40rem;
 }
 
 .card-side {
@@ -1410,6 +1619,7 @@ only screen and (hover: none) {
 }
 
 .section-testimonial {
+    margin-top: -15rem;
     position: relative;
     padding: 15rem 0;
 }
@@ -1421,6 +1631,7 @@ only screen and (hover: none) {
 }
 
 .section-booking {
+    margin-top: -15rem;
     padding: 5rem 0;
     background-image: linear-gradient(to right, #F57E27, #DD0D62);
 }
