--- a/css/style.css
+++ b/css/style.css
@@ -921,7 +921,7 @@ body {
 
 .header {
     height: 100vh;
-    background-image: url(/img/mainpalace.jpeg);
+    background-image: url(../img/mainpalace.jpeg);
     background-size: cover;
     background-position: top;
     position: relative;
